/*
 * Copyright (C) 2018 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package perfetto.protos;

message FtraceStats {
  message FtraceCpuStats {
    optional uint32 cpu = 1;
    optional uint32 overwrite_count = 2;
    optional uint32 entries = 3;
    optional uint32 overrun = 4;
    optional uint32 commit_overrun = 5;
    optional uint32 bytes_read = 6;
    optional double oldest_event_ts = 7;
    optional double now_ts = 8;
    optional uint32 dropped_events = 9;
    optional uint32 read_events = 10;
  }

  repeated FtraceCpuStats cpu_stats = 1;
}
